FACT-250: Amend areas of law heading

--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -17,6 +17,8 @@
   "translatorsOrInterpretersHeading": "Translators or Interpreters",
   "translatorsOrInterpretersText": "Get an interpreter at a court or tribunal.",
   "areasOfLawHeading": "This location handles",
+  "areasOfLawHeadingNotInPerson": "Related content",
+  "areasOfLawHintNotInPerson": "Find out more about",
   "claimApplicationText": "starting a money claim application",
   "divorceApplicationText": "starting a divorce application",
   "civilPartnershipText": "ending a civil partnership",
