--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -13,7 +13,9 @@
   "telephoneHeadingWelsh": "Yr Iaith Gymraeg",
   "telephoneAndFaxHeading": "Rhif ffôn a ffacs",
   "buildingFacilitiesHeading": "Cyfleusterau adeiladu",
-  "buildingFacilitiesP1": "Os oes gennych anabledd a bod angen help arnoch i ddod i wrandawiad, cysylltwch â'r llys neu'r tribiwnlys i sicrhau bod y cyfleusterau'n diwallu eich anghenion penodol neu i drafod yr addasiad rhesymol sydd ei angen arnoch.",
+  "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
+  "buildingFacilitiesMultipleContacts": "or",
+  "buildingFacilitiesContactsUs": "us",
   "translatorsOrInterpretersHeading": "Cyfieithwyr neu Ddehonglwyr",
   "translatorsOrInterpretersText": "Cael cyfieithydd mewn llys neu dribiwnlys.",
   "areasOfLawHeading": "Mae'r lleoliad hwn yn ymdrin â",
