fact 249 - adding conditions to fix spacing with full stop

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -15,7 +15,7 @@
   "buildingFacilitiesHeading": "Cyfleusterau adeiladu",
   "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
   "buildingFacilitiesMultipleContacts": "or",
-  "buildingFacilitiesContactsUs": "us",
+  "buildingFacilitiesContactsUs": "us.",
   "translatorsOrInterpretersHeading": "Cyfieithwyr neu Ddehonglwyr",
   "translatorsOrInterpretersText": "Cael cyfieithydd mewn llys neu dribiwnlys.",
   "areasOfLawHeading": "Mae'r lleoliad hwn yn ymdrin â",
