--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -15,7 +15,7 @@
   "buildingFacilitiesHeading": "Building facilities",
   "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
   "buildingFacilitiesMultipleContacts": "or",
-  "buildingFacilitiesContactsUs": "us",
+  "buildingFacilitiesContactsUs": "us.",
   "translatorsOrInterpretersHeading": "Translators or Interpreters",
   "translatorsOrInterpretersText": "Get an interpreter at a court or tribunal.",
   "areasOfLawHeading": "This location handles",
