adding welsh translation

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -13,9 +13,9 @@
   "telephoneHeadingWelsh": "Yr Iaith Gymraeg",
   "telephoneAndFaxHeading": "Rhif ffôn a ffacs",
   "buildingFacilitiesHeading": "Cyfleusterau adeiladu",
-  "buildingFacilitiesP1": "If you have a disability and need help coming to a hearing, please contact",
-  "buildingFacilitiesMultipleContacts": "or",
-  "buildingFacilitiesContactsUs": "us.",
+  "buildingFacilitiesP1": "Os oes gennych anabledd a’ch bod angen cymorth i ddod i wrandawiad, cysylltwch â",
+  "buildingFacilitiesMultipleContacts": "neu",
+  "buildingFacilitiesContactsUs": "ni.",
   "translatorsOrInterpretersHeading": "Cyfieithwyr neu Ddehonglwyr",
   "translatorsOrInterpretersText": "Cael cyfieithydd mewn llys neu dribiwnlys.",
   "areasOfLawHeading": "Mae'r lleoliad hwn yn ymdrin â",
