--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -19,6 +19,8 @@
   "translatorsOrInterpretersHeading": "Cyfieithwyr neu Ddehonglwyr",
   "translatorsOrInterpretersText": "Cael cyfieithydd mewn llys neu dribiwnlys.",
   "areasOfLawHeading": "Mae'r lleoliad hwn yn ymdrin â",
+  "areasOfLawHeadingNotInPerson": "Cynnwys perthnasol",
+  "areasOfLawHintNotInPerson": "Mwy o wybodaeth am",
   "claimApplicationText": "dechrau cais i hawlio arian",
   "divorceApplicationText": "dechrau cais ysgariad",
   "civilPartnershipText": "dod â phartneriaeth sifil i ben",
