FACT-279: DAC - search results

--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -1,5 +1,6 @@
 {
   "title": "Search for contact details - Find a court or tribunal - GOV.UK",
+  "resultsTitle": "Search Results - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What is the name or address of the court or tribunal?",
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
