--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -1,5 +1,6 @@
 {
   "title": "Chwilio am fanylion cyswllt - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "resultsTitle": "Search Results - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth yw enw a chyfeiriad y llys neu’r tribiwnlys?",
   "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, -bos neu neges destun a anfonwyd gennym.",
