FACT-281: DAC - Error title

--- a/src/main/locales/cy/search/location.json
+++ b/src/main/locales/cy/search/location.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Gwall:",
   "title": "Chwilio am fanylion cyswllt - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "resultsTitle": "Search Results - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
