--- a/src/main/locales/cy/search/option.json
+++ b/src/main/locales/cy/search/option.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Gwall:",
   "title": "Beth ydych chi eisiau ei wneud? - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "A ydych chi’n gwybod enw’r llys neu’r tribiwnlys?",
