--- a/src/main/locales/en/choose-action.json
+++ b/src/main/locales/en/choose-action.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Error:",
   "title": "What do you want to do? - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What do you want to do?",
