--- a/src/main/locales/en/choose-service.json
+++ b/src/main/locales/en/choose-service.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Error:",
   "title": "Choose an area of law - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What do you want to know more about?",
