--- a/src/main/locales/en/postcode-search.json
+++ b/src/main/locales/en/postcode-search.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Error:",
   "title": "What is your postcode? - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What is your postcode?",
