--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Error:",
   "title": "Search for contact details - Find a court or tribunal - GOV.UK",
   "resultsTitle": "Search Results - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
