--- a/src/main/locales/cy/choose-action.json
+++ b/src/main/locales/cy/choose-action.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Gwall:",
   "title": "Beth ydych chi eisiau ei wneud? - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth ydych chi eisiau ei wneud?",
