--- a/src/main/locales/cy/choose-service.json
+++ b/src/main/locales/cy/choose-service.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Gwall:",
   "title": "Dewiswch faes cyfreithiol - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Beth ydych chi’n awyddus i wybod mwy amdano?",
