--- a/src/main/locales/cy/service.json
+++ b/src/main/locales/cy/service.json
@@ -1,4 +1,5 @@
 {
+  "errorTitle": "Gwall:",
   "title": "Dewiswch faes cyfreithiol - {serviceChosen} - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}?",
