FACT-237: Correct capitalisation

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -3,7 +3,7 @@
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "notInPersonP1": "Mae’r lleoliad hwn yn gwasanaethu {catchmentArea} ar gyfer {serviceArea}. Nid ydym yn darparu gwasanaeth wyneb yn wyneb.",
   "contactUsHeading": "Cysylltwch â ni",
-  "addressHeading": "cyfeiriad",
+  "addressHeading": "Cyfeiriad",
   "directionsText": "Cael cyfarwyddiadau",
   "visitingExpectationText": "Beth i’w ddisgwyl wrth ddod i lys neu dribiwnlys",
   "additionalInfoHeading": "Diweddariad Coronafeirws (COVID-19)",
