--- a/src/main/locales/cy/accessibility-statement.json
+++ b/src/main/locales/cy/accessibility-statement.json
@@ -10,25 +10,28 @@
   "p5": "‘Find a court or tribunal’ (FaCT) was successfully <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> tested to WCAG 2.0 AA standard. A <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre</a> assessment to WCAG2.1 AA standard, was also carried out in November 2020. Issues arising were immediately corrected. A review is scheduled for November 2021.",
   "h3": "Feedback and contact information",
   "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille then ",
-  "feedback": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a> hmctsfinderfeedback@justice.gov.uk",
-  "h4": "Enforcement procedure",
-  "p7": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\">contact the Equality Advisory and Support Service (EASS) (opens in a new window)</a>.",
-  "h5": "Contacting us by phone or visiting us in person",
-  "p8": "Contact information for all courts and tribunals can be found through the <a class=\"govuk-link\" href=\"https://www.gov.uk/find-court-tribunal\">Find a court or tribunal service</a>.",
-  "p9": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
-  "p10": "Our courts and tribunals have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
-  "h6": "Technical information about this website’s accessibility",
-  "p11": "HM Courts and Tribunal Service is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
-  "h7": "Compliance status",
-  "p12": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.",
-  "h8": "Preparation of this accessibility statement",
-  "p13": "This statement was prepared on 3 December 2020. It was last reviewed on 3 December 2020.",
-  "p14": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout November 2020 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 23 November 2020.",
-  "p15": "This is an excerpt from the DAC report explaining their methodology:",
-  "h9": "Testing procedure:",
-  "p16": "“The service is tested by a team of experienced auditors and analysts, many of who are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
-  "h10": "User testing:",
-  "p17": "“Manual accessibility checking was conducted by a team of disabled individuals, using a range of adaptive technologies (hardware and software designed to facilitate the use of computers by people with disabilities).”",
-  "h11": "Technical auditing:",
-  "p18": "“Technical auditing involves the experienced application of a number of technical auditing and standards compliance assessment tools. This combined with an extensive knowledge of WCAG, its application and wider global practice provides the DAC website with further credibility and quality.”"
+  "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a> hmctsfinderfeedback@justice.gov.uk",
+  "p7": "We’ll consider your request and get back to you within 10 working days.",
+  "h4": "Reporting accessibility problems with this website",
+  "p8": "We’re always looking to improve the accessibility of this website. If you find any problems  not listed on this page or think we’re not meeting accessibility requirements, contact",
+  "h5": "Enforcement procedure",
+  "p9": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\">contact the Equality Advisory and Support Service (EASS) (opens in a new window)</a>.",
+  "h6": "Contacting us by phone or visiting us in person",
+  "p10": "Contact information for all courts and tribunals can be found through the <a class=\"govuk-link\" href=\"https://www.gov.uk/find-court-tribunal\">Find a court or tribunal service</a>.",
+  "p11": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
+  "p12": "Our courts and tribunals have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
+  "h7": "Technical information about this website’s accessibility",
+  "p13": "HM Courts and Tribunal Service is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
+  "h8": "Compliance status",
+  "p14": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.",
+  "h9": "Preparation of this accessibility statement",
+  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 3 December 2020.",
+  "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout November 2020 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 23 November 2020.",
+  "p17": "This is an excerpt from the DAC report explaining their methodology:",
+  "h10": "Testing procedure:",
+  "p18": "“The service is tested by a team of experienced auditors and analysts, many of who are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
+  "h11": "User testing:",
+  "p19": "“Manual accessibility checking was conducted by a team of disabled individuals, using a range of adaptive technologies (hardware and software designed to facilitate the use of computers by people with disabilities).”",
+  "h12": "Technical auditing:",
+  "p20": "“Technical auditing involves the experienced application of a number of technical auditing and standards compliance assessment tools. This combined with an extensive knowledge of WCAG, its application and wider global practice provides the DAC website with further credibility and quality.”"
 }
