--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -1,5 +1,6 @@
 {
   "title": "Accessibility Statement - Find a court or tribunal - GOV.UK",
+  "serviceName": "Find a court or tribunal",
   "h1": "Accessibility statement for the ‘Find a court or tribunal’ service",
   "p1": "This accessibility statement applies to content published on <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
   "p2": "This website is run by HM Courts and Tribunals. We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
