--- a/src/main/locales/en/postcode-results.json
+++ b/src/main/locales/en/postcode-results.json
@@ -6,7 +6,8 @@
   "civilHint": "We manage applications to end a civil partnership at our regional divorce units (RDU).",
   "secondHint": "This is the nearest RDU to {postcode}",
   "thirdHint": "Find where to send your documents or ask about your application’s progress.",
-  "multipleResultsHint": "We found {total} court or tribunal related to {serviceArea} matching your search for '{postcode}'.",
+  "singleResultsHint": "We found 1 court or tribunal related to {serviceArea} matching your search for '{postcode}'.",
+  "multipleResultsHint": "We found {total} courts or tribunals related to {serviceArea} matching your search for '{postcode}'.",
   "applyOnlineHeading": "Apply online",
   "unit": "miles"
 }
