--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -17,6 +17,7 @@
       "li3": "searching for something less specific"
     }
   },
+  "foundResult": "We found 1 court or tribunal matching your search for '{search}'.",
   "foundResults": "We found {total} courts or tribunals matching your search for '{search}'.",
   "mostRelevant": "Most relevant results displayed.",
   "errorBlank": {
