--- a/src/main/locales/en/template.json
+++ b/src/main/locales/en/template.json
@@ -1,5 +1,4 @@
 {
-  "cookieBanner": "GOV.UK uses cookies to make the site simpler. <a class=\"govuk-link\" href=\"https://www.gov.uk/help/cookies\">Find out more about cookies</a>",
   "feedback": "This is a new service – your <a class=\"govuk-link\" href=\"https://www.smartsurvey.co.uk/s/feedbackFaCT\">feedback</a> will help us to improve it. ",
   "languageToggle": "<a href=\"?lng=cy\" class=\"govuk-link fact-language\">Cymraeg</a>",
   "backLink": "Back",
@@ -9,5 +8,10 @@
   "cookies": "Cookies",
   "accessibility": "Accessibility statement",
   "termsAndConditions": "Terms and conditions",
-  "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg"
+  "usingServicesInWelsh": "Rhestr o Wasanaethau Cymraeg",
+  "cookieBannerH1": "Tell us whether you accept cookies",
+  "cookieBannerP1": "We use <a href=\"/cookies\">cookies to collect information</a> about how you use this service. ",
+  "cookieBannerP2": "We use this information to make the website work as well as possible and improve our services.",
+  "cookieBannerButton": "Accept all cookies",
+  "cookieBannerAnchor": "Set cookie preferences"
 }
