FACT-284: display 'divorce' area of law as 'divorce hearings' for in person courts

--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -44,5 +44,6 @@
   "processingTimes": "Amseroedd prosesu neu ateb",
   "sendUsYourDocuments": "Anfonwch eich dogfennau atom",
   "updates": "Cael diweddariad gyda'ch cais",
-  "altImageText": "Tu blaen"
+  "altImageText": "Tu blaen",
+  "divorceHearings": "Divorce hearings"
 }
