--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -44,5 +44,6 @@
   "processingTimes": "Processing or reply times",
   "sendUsYourDocuments": "Send us your documents",
   "updates": "Get an update with your application",
-  "altImageText": "Front view of"
+  "altImageText": "Front view of",
+  "divorceHearings": "Divorce hearings"
 }
