--- a/src/main/locales/cy/court-details.json
+++ b/src/main/locales/cy/court-details.json
@@ -45,5 +45,5 @@
   "sendUsYourDocuments": "Anfonwch eich dogfennau atom",
   "updates": "Cael diweddariad gyda'ch cais",
   "altImageText": "Tu blaen",
-  "divorceHearings": "Divorce hearings"
+  "divorceHearings": "Gwrandawiadau ysgaru"
 }
