--- a/src/main/locales/cy/accessibility-statement.json
+++ b/src/main/locales/cy/accessibility-statement.json
@@ -1,35 +1,35 @@
 {
-  "title": "Accessibility Statement - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
-  "h1": "Accessibility statement for the ‘Find a court or tribunal’ service",
-  "p1": "This accessibility statement applies to content published on <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
-  "p2": "This website is run by HM Courts and Tribunals. We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
-  "bullets": ["change colours, contrast levels and fonts", "zoom in up to 300% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
-  "p3": "We’ve also made the website text as simple as possible to understand.\n",
-  "p4": "<a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> has advice on making your device easier to use if you have a disability.",
-  "h3": "Feedback and contact information",
-  "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille then ",
-  "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a> hmctsfinderfeedback@justice.gov.uk",
-  "p7": "We’ll consider your request and get back to you within 10 working days.",
-  "h4": "Reporting accessibility problems with this website",
-  "p8": "We’re always looking to improve the accessibility of this website. If you find any problems  not listed on this page or think we’re not meeting accessibility requirements, contact",
-  "h5": "Enforcement procedure",
-  "p9": "The Equality and Human Rights Commission (EHRC) is responsible for enforcing the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018 (the ‘accessibility regulations’). If you’re not happy with how we respond to your complaint, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\">contact the Equality Advisory and Support Service (EASS) (opens in a new window)</a>.",
-  "h6": "Contacting us by phone or visiting us in person",
-  "p11": "We provide a text relay service for people who are D/deaf, hearing impaired or have a speech impediment.",
-  "p12": "Our courts and tribunals have audio induction loops, or if you contact us before your visit we can arrange a British Sign Language (BSL) interpreter.",
-  "h7": "Technical information about this website’s accessibility",
-  "p13": "HM Courts and Tribunal Service is committed to making its websites accessible, in accordance with the Public Sector Bodies (Websites and Mobile Applications) (No. 2) Accessibility Regulations 2018.",
-  "h8": "Compliance status",
-  "p14": "This website is fully compliant with the Web Content Accessibility Guidelines version 2.1 AA standard.",
-  "h9": "Preparation of this accessibility statement",
-  "p15": "This statement was prepared on 3 December 2020. It was last reviewed on 3 December 2020.",
-  "p16": "This website was tested at all stages of its build and subjected to <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> testing throughout November 2020 and a full <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> assessment on 23 November 2020.",
-  "p17": "This is an excerpt from the DAC report explaining their methodology:",
-  "h10": "Testing procedure:",
-  "p18": "“The service is tested by a team of experienced auditors and analysts, many of who are disabled individuals and users of adaptive technology. The combination of subjective pan-disability user feedback and comprehensive technical auditing allows us to measure how the service performs technically and practically, thereby offering an essential added dimension to our test results that other methods of testing cannot provide.”",
-  "h11": "User testing:",
-  "p19": "“Manual accessibility checking was conducted by a team of disabled individuals, using a range of adaptive technologies (hardware and software designed to facilitate the use of computers by people with disabilities).”",
-  "h12": "Technical auditing:",
-  "p20": "“Technical auditing involves the experienced application of a number of technical auditing and standards compliance assessment tools. This combined with an extensive knowledge of WCAG, its application and wider global practice provides the DAC website with further credibility and quality.”"
+  "title": "Datganiad hygyrchedd - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "serviceName": "Dod o hyd i lys neu dribiwnlys",
+  "h1": "Datganiad hygyrchedd ar gyfer y gwasanaeth ‘Find a court or tribunal’",
+  "p1": "Mae’r datganiad hygyrchedd hwn yn berthnasol i gynnwys a gyhoeddir ar <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
+  "p2": "Gwasanaeth Llysoedd a Thribiwnlysoedd EM sy’n gyfrifol am y wefan hon. Rydym eisiau i gymaint o bobl â phosibl allu defnyddio'r wefan hon, felly rydym wedi ceisio ei gwneud mor hygyrch â phosibl. Er enghraifft, golyga hyn y dylech allu:",
+  "bullets": ["newid y lliwiau, y lefelau cyferbyniad a’r ffontiau", "gwneud y testun hyd at 300% yn fwy heb iddo ddiflannu oddi ar y sgrin", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio bysellfwrdd yn unig", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio meddalwedd adnabod llais", "gwrando ar y rhan fwyaf o'r wefan gan ddefnyddio darllenydd sgrin (gan gynnwys fersiynau diweddaraf JAWS, NVDA a VoiceOver)"],
+  "p3": "Rydym hefyd wedi sicrhau ein bod wedi defnyddio iaith syml",
+  "p4": "Mae gan <a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> gyngor ynghylch gwneud eich dyfais yn haws i’w defnyddio os oes gennych anabledd.",
+  "h3": "Adborth a gwybodaeth gyswllt",
+  "p6": "accessible PDF, large print, easy read or braille then email <url>\n\t\n\nOs ydych angen gwybodaeth sydd ar y wefan hon mewn fformat arall megis ar ffurf PDF hygyrch, print bras, fformat hawdd ei ddarllen neu braille, yna ",
+  "bullet1": "e-bostiwch <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
+  "p7": "Byddwn yn ystyried eich cais ac yn ymateb o fewn 10 diwrnod gwaith.",
+  "h4": "Riportio problemau hygyrchedd gyda'r wefan hon",
+  "p8": "Rydym wastad yn ceisio gwella hygyrchedd y wefan hon. Os byddwch yn cael unrhyw broblemau nad ydynt wedi’u cynnwys ar y dudalen hon, neu’n credu nad ydym yn bodloni’r gofynion o ran hygyrchedd, cysylltwch â",
+  "h5": "Y Weithdrefn Orfodi",
+  "p9": "Y Comisiwn Cydraddoldeb a Hawliau Dynol (EHRC) sy’n gyfrifol am orfodi Rheoliadau Hygyrchedd Cyrff y Sector Cyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018 (y ‘rheoliadau hygyrchedd’). Os nad ydych chi’n fodlon gyda’r ffordd rydym yn ymateb i’ch cwyn, <a class=\"govuk-link\" href=\"https://www.equalityadvisoryservice.com/\"> cysylltwch â’r Gwasanaeth Cynghori a Chymorth Cydraddoldeb (EASS) (agor mewn ffenestr newydd)</a>.",
+  "h6": "Cysylltu â ni dros y ffôn neu ymweld â ni’n bersonol",
+  "p11": "Rydym yn darparu gwasanaeth cyfnewid negeseuon testun ar gyfer pobl byddar, pobl sydd â nam ar eu clyw a phobl sydd â nam ar eu lleferydd.",
+  "p12": "Mae yna ddolenni sain yn ein llysoedd a’n tribiwnlysoedd, neu os byddwch yn cysylltu â ni cyn eich ymweliad, gallwn drefnu cyfieithydd Iaith Arwyddion Prydain (BSL) ar eich cyfer.",
+  "h7": "Gwybodaeth dechnegol am hygyrchedd y wefan hon",
+  "p13": "Mae GLlTEM wedi ymrwymo i sicrhau bod ei wefannau yn hygyrch, a hynny yn unol â Rheoliadau Hygyrchedd Cyrff y Sector Gyhoeddus (Gwefannau a Rhaglenni Symudol) (Rhif 2) 2018.",
+  "h8": "Statws cydymffurfiaeth",
+  "p14": "Mae’r wefan hon yn cydymffurfio’n llawn â’r Canllawiau Hygyrchedd Cynnwys Gwe fersiwn 2.1 safon AA.",
+  "h9": "Paratoi datganiad hygyrchedd",
+  "p15": "Cafodd y datganiad hwn ei baratoi ar 3 Rhagfyr 2020. Cafodd ei adolygu ddiwethaf ar 3 Rhagfyr 2020.",
+  "p16": "Profwyd y wefan hon ar bob cam o'i chreu ac mae’n amodol ar brofi <a class=\"govuk-link\" href=\"https://pa11y.org/\">Pa11y</a> drwy gydol mis Tachwedd 2020 ac asesiad <a class=\"govuk-link\" href=\"https://digitalaccessibilitycentre.org/\">Digital Accessibility Centre(DAC)</a> llawn ar 23 Tachwedd 2020.",
+  "p17": "Dyma ddyfyniad o’r adroddiad DAC yn esbonio eu methodoleg:",
+  "h10": "Gweithdrefn brofi:",
+  "p18": "“Mae'r gwasanaeth yn cael ei brofi gan dîm o archwilwyr a dadansoddwyr profiadol, llawer ohonynt yn unigolion anabl ac yn ddefnyddwyr technoleg addasol. Mae'r cyfuniad o adborth goddrychol gan ddefnyddwyr anabl ac archwiliadau technegol cynhwysfawr yn ein galluogi i fesur sut mae'r gwasanaeth yn perfformio'n dechnegol ac yn ymarferol, gan gynnig dimensiwn ychwanegol hanfodol i ganlyniadau ein profion na all dulliau eraill o brofi eu darparu.”",
+  "h11": "Profi defnyddwyr:",
+  "p19": "“Cynhaliwyd archwiliadau hygyrchedd â llaw gan dîm o unigolion anabl, gan ddefnyddio ystod o dechnolegau addasol (caledwedd a meddalwedd a gynlluniwyd i hwyluso'r defnydd o gyfrifiaduron gan bobl ag anableddau).”",
+  "h12": "Archwilio technegol:",
+  "p20": "“Mae archwilio technegol yn cynnwys cymhwyso nifer o ddulliau archwilio technegol a safonau asesu cydymffurfiaeth. Mae hyn, ynghyd â gwybodaeth helaeth am WCAG, y broses o’i roi ar waith ac ymarfer byd-eang ehangach, yn rhoi hygrededd ac ansawdd pellach i wefan DAC.”"
 }
