--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -5,11 +5,11 @@
   "p1": "This accessibility statement applies to content published on <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
   "p2": "This website is run by HM Courts and Tribunals. We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
   "bullets": ["change colours, contrast levels and fonts", "zoom in up to 300% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
-  "p3": "We’ve also made the website text as simple as possible to understand.\n",
+  "p3": "We’ve also made the website text as simple as possible to understand.",
   "p4": "<a class=\"govuk-link\" href=\"https://mcmw.abilitynet.org.uk/\">AbilityNet</a> has advice on making your device easier to use if you have a disability.",
   "h3": "Feedback and contact information",
   "p6": "If you need information on this website in a different format like accessible PDF, large print, easy read or braille then ",
-  "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a> hmctsfinderfeedback@justice.gov.uk",
+  "bullet1": "email <a class=\"govuk-link\" href=\"mailto:hmctsfinderfeedback@justice.gov.uk\">hmctsfinderfeedback@justice.gov.uk</a>",
   "p7": "We’ll consider your request and get back to you within 10 working days.",
   "h4": "Reporting accessibility problems with this website",
   "p8": "We’re always looking to improve the accessibility of this website. If you find any problems  not listed on this page or think we’re not meeting accessibility requirements, contact",
