--- a/src/main/locales/cy/search/option.json
+++ b/src/main/locales/cy/search/option.json
@@ -1,6 +1,6 @@
 {
   "errorTitle": "Gwall:",
-  "title": "Beth ydych chi eisiau ei wneud? - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "title": "Beth yw enw'r llys? - Dod o hyd i Lys neu Dribiwnlys - GOV.UK ",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "A ydych chi’n gwybod enw’r llys neu’r tribiwnlys?",
   "hint": "Gellir gweld enw’r llys neu’r tribiwnlys ar lythyr, -bos neu neges destun a anfonwyd gennym.",
@@ -12,5 +12,6 @@
   "error":{
     "title": "Mae yna broblem",
     "text": "Dywedwch a yw’r enw gennych ai peidio"
-  }
+  },
+  "seoMetadataDescription": "Dywedwch wrthym os ydych yn gwybod beth yw enw neu gyfeiriad y llys neu'r tribiwnlys i ddod o hyd i lys neu dribiwnlys yng Nghymru neu Loegr"
 }
