FACT-317: Add Welsh

--- a/src/main/locales/cy/postcode-search.json
+++ b/src/main/locales/cy/postcode-search.json
@@ -24,5 +24,5 @@
     "scottishChildrenPostcode": "Os yw’r plentyn (neu’r plant) yn byw yn Yr Alban, byddant tu hwnt i awdurdodaeth y gwasanaeth hwn. Cysylltwch â Llysoedd a Thribiwnlysoedd Yr Alban i gael cymorth.",
     "northernIrelandPostcode": "Nid oed gennym wybodaeth am y llysoedd yng Ngogledd Iwerddon. Cysylltwch â Llysoedd a Thribiwnlysoedd Gogledd Iwerddon i gael cymorth."
   },
-  "seoMetadataDescription": "Tell us your postcode so we can find the most appropriate court for you"
+  "seoMetadataDescription": "Dywedwch wrthym beth yw eich cod post fel y gallwn eich helpu i ddod o hyd i'r llys mwyaf priodol ar eich cyfer"
 }
