--- a/src/main/locales/en/choose-action.json
+++ b/src/main/locales/en/choose-action.json
@@ -1,6 +1,6 @@
 {
   "errorTitle": "Error:",
-  "title": "What do you want to do? - Find a court or tribunal - GOV.UK",
+  "title": "Find or contact a court - Find a Court or Tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What do you want to do?",
   "answers": {
@@ -14,5 +14,6 @@
   "error": {
     "title": "There is a problem",
     "text": "Select what you want to do"
-  }
+  },
+  "seoMetadataDescription": "Tell us what you're trying to do so we can help you find a court or tribunal in England or Wales"
 }
