FACT-312, FACT-313, FACT-314, FACT-315, FACT-316, FACT-352 and FACT-353: Add seo metadata description to service areas page

--- a/src/main/locales/cy/service.json
+++ b/src/main/locales/cy/service.json
@@ -1,6 +1,6 @@
 {
   "errorTitle": "Gwall:",
-  "title": "Dewiswch faes cyfreithiol - {serviceChosen} - Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "title": "Achosion {serviceChosen} - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "question": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}?",
   "answers": {
@@ -10,5 +10,6 @@
   "error": {
     "title": "Mae yna broblem",
     "text": "Dewiswch pa fath o help sydd ei angen arnoch mewn perthynas ag {serviceChosen}"
-  }
+  },
+  "courtsManaging": "Llysoedd sy'n rheoli "
 }
