--- a/src/main/locales/en/service.json
+++ b/src/main/locales/en/service.json
@@ -1,6 +1,6 @@
 {
   "errorTitle": "Error:",
-  "title": "Choose an area of law - {serviceChosen} - Find a court or tribunal - GOV.UK",
+  "title": "{serviceChosen} cases - Find a court or tribunal - GOV.UK",
   "serviceName": "Find a court or tribunal",
   "question": "What kind of help do you need with {serviceChosen}?",
   "answers": {
@@ -10,5 +10,6 @@
   "error": {
     "title": "There is a problem",
     "text": "Select what kind of help you need with {serviceChosen}"
-  }
+  },
+  "courtsManaging": "Courts managing "
 }
