FACT-320:Change "Find a court or tribunal" to "Find a Court or Tribunal"

--- a/src/main/locales/cy/accessibility-statement.json
+++ b/src/main/locales/cy/accessibility-statement.json
@@ -1,7 +1,7 @@
 {
   "title": "Datganiad hygyrchedd - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
-  "h1": "Datganiad hygyrchedd ar gyfer y gwasanaeth ‘Find a court or tribunal’",
+  "h1": "Datganiad hygyrchedd ar gyfer y gwasanaeth ‘Dod o hyd i lys neu dribiwnlys’",
   "p1": "Mae’r datganiad hygyrchedd hwn yn berthnasol i gynnwys a gyhoeddir ar <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
   "p2": "Gwasanaeth Llysoedd a Thribiwnlysoedd EM sy’n gyfrifol am y wefan hon. Rydym eisiau i gymaint o bobl â phosibl allu defnyddio'r wefan hon, felly rydym wedi ceisio ei gwneud mor hygyrch â phosibl. Er enghraifft, golyga hyn y dylech allu:",
   "bullets": ["newid y lliwiau, y lefelau cyferbyniad a’r ffontiau", "gwneud y testun hyd at 300% yn fwy heb iddo ddiflannu oddi ar y sgrin", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio bysellfwrdd yn unig", "mynd drwy’r rhan fwyaf o'r wefan gan ddefnyddio meddalwedd adnabod llais", "gwrando ar y rhan fwyaf o'r wefan gan ddefnyddio darllenydd sgrin (gan gynnwys fersiynau diweddaraf JAWS, NVDA a VoiceOver)"],
