--- a/src/main/locales/cy/cookies.json
+++ b/src/main/locales/cy/cookies.json
@@ -1,6 +1,6 @@
 {
-  "title": "Cookie preferences - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "Cookie preferences - Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "h1": "Cookies",
   "p1": "Cookies are files saved on your phone, tablet or computer when you visit a website. Most websites need cookies to work properly.",
   "p2": "This service uses cookies to:",
