--- a/src/main/locales/en/choose-action.json
+++ b/src/main/locales/en/choose-action.json
@@ -1,7 +1,7 @@
 {
   "errorTitle": "Error:",
   "title": "Find or contact a court - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "question": "What do you want to do?",
   "answers": {
     "a1": "Find the nearest court or tribunal",
