--- a/src/main/locales/en/home.json
+++ b/src/main/locales/en/home.json
@@ -1,6 +1,6 @@
 {
-  "title": "Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "p1": "Use this service to find a court or tribunal in England and Wales",
   "bullets": ["address", "contact details", "opening times", "building information e.g. disabled access or parking", "to help me get an update"],
   "button": "Start now",
