--- a/src/main/locales/en/search/option.json
+++ b/src/main/locales/en/search/option.json
@@ -1,7 +1,7 @@
 {
   "errorTitle": "Error:",
   "title": "What is the court name? - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "question": "Do you know the name of the court or tribunal?",
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "answers": {
