--- a/src/main/locales/en/unknownService.json
+++ b/src/main/locales/en/unknownService.json
@@ -1,6 +1,6 @@
 {
   "title": "Service not found - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "h1": "Sorry, we couldn't help you",
   "p_1": "If you have a letter, email or text from HM Courts and Tribunals Service (HMCTS), a court or a tribunal check it for contact details of the court or tribunal.",
   "h2_1": "Find the court or tribunal by name, address, town or city",
