--- a/src/main/locales/en/accessibility-statement.json
+++ b/src/main/locales/en/accessibility-statement.json
@@ -1,7 +1,7 @@
 {
-  "title": "Accessibility Statement - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
-  "h1": "Accessibility statement for the ‘Find a court or tribunal’ service",
+  "title": "Accessibility Statement - Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
+  "h1": "Accessibility statement for the ‘Find a Court or Tribunal’ service",
   "p1": "This accessibility statement applies to content published on <a class=\"govuk-link\" href=\"http://www.find-court-tribunal.service.gov.uk\">www.find-court-tribunal.service.gov.uk</a>",
   "p2": "This website is run by HM Courts and Tribunals. We want as many people as possible to be able to use this website, so we have designed it to be accessible. For example, that means you should be able to:",
   "bullets": ["change colours, contrast levels and fonts", "zoom in up to 300% without the text spilling off the screen", "navigate most of the website using just a keyboard", "navigate most of the website using speech recognition software", "listen to most of the website using a screen reader (including the most recent versions of JAWS, NVDA and VoiceOver)"],
