--- a/src/main/locales/en/choose-service.json
+++ b/src/main/locales/en/choose-service.json
@@ -1,7 +1,7 @@
 {
   "errorTitle": "Error:",
   "title": "Why do you need a court? - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "question": "What do you want to know more about?",
   "answers": {
     "a1": "I can't find what I'm looking for"
