--- a/src/main/locales/en/court-details.json
+++ b/src/main/locales/en/court-details.json
@@ -1,6 +1,6 @@
 {
-  "title": "Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "notInPersonP1": "This location services {catchmentArea} for {serviceArea}. We do not provide an in-person service.",
   "contactUsHeading": "Contact us",
   "addressHeading": "Address",
