--- a/src/main/locales/en/postcode-results.json
+++ b/src/main/locales/en/postcode-results.json
@@ -1,6 +1,6 @@
 {
   "title": "Court search results - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "question": "Court or tribunal search results",
   "divorceHint": "We manage your divorce applications at our regional divorce units (RDU).",
   "civilHint": "We manage applications to end a civil partnership at our regional divorce units (RDU).",
