--- a/src/main/locales/en/postcode-search.json
+++ b/src/main/locales/en/postcode-search.json
@@ -1,7 +1,7 @@
 {
   "errorTitle": "Error:",
-  "title": "What is your postcode? - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "What is your postcode? - Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "question": "What is your postcode?",
   "hint": "We will use your postcode to show you the closest court or tribunal that handles {serviceArea} to you.",
   "childcareHint": "We will use the postcode of your children’s home to show you the closest court or tribunal that handles childcare arrangements to them.",
