--- a/src/main/locales/en/search/location.json
+++ b/src/main/locales/en/search/location.json
@@ -1,8 +1,8 @@
 {
   "errorTitle": "Error:",
   "title": "Search by name or address - Find a Court or Tribunal - GOV.UK",
-  "resultsTitle": "Search Results - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "resultsTitle": "Search Results - Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "question": "What is the name or address of the court or tribunal?",
   "hint": "The name of the court or tribunal can be found on a letter, email or text from us.",
   "text": "Enter a court name, address, town or city",
