--- a/src/main/locales/en/service-results.json
+++ b/src/main/locales/en/service-results.json
@@ -1,6 +1,6 @@
 {
   "title": "Court search results - Find a Court or Tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "serviceName": "Find a Court or Tribunal",
   "question": "Court or tribunal search results",
   "hint": "We manage {service-area} applications at our central service centre. Find where to send your documents or ask about your application’s progress.",
   "applyOnlineHeading": "Apply online",
