--- a/src/main/locales/en/service.json
+++ b/src/main/locales/en/service.json
@@ -1,7 +1,7 @@
 {
   "errorTitle": "Error:",
-  "title": "{serviceChosen} cases - Find a court or tribunal - GOV.UK",
-  "serviceName": "Find a court or tribunal",
+  "title": "{serviceChosen} cases - Find a Court or Tribunal - GOV.UK",
+  "serviceName": "Find a Court or Tribunal",
   "question": "What kind of help do you need with {serviceChosen}?",
   "answers": {
     "a1": "I can't find what I'm looking for"
