FACT-320: Update title and add seoMetadataDescrption to in-person court page

--- a/src/main/locales/cy/closed-court.json
+++ b/src/main/locales/cy/closed-court.json
@@ -1,5 +1,5 @@
 {
-  "title": "Dod o hyd i lys neu dribiwnlys - GOV.UK",
+  "title": "{courtSlug} - Dod o hyd i lys neu dribiwnlys - GOV.UK",
   "serviceName": "Dod o hyd i lys neu dribiwnlys",
   "p1": "Nid yw’r llys neu’r tribiwnlys hwn yn weithredol. Mae busnes y llys hwn wedi ei drosglwyddo i lys arall yn y cyffiniau.",
   "linkText": "Chwilio am lys neu dribiwnlys arall"
