--- a/src/main/locales/en/closed-court.json
+++ b/src/main/locales/en/closed-court.json
@@ -1,5 +1,5 @@
 {
-  "title": "Find a Court or Tribunal - GOV.UK",
+  "title": "{courtSlug} - Find a Court or Tribunal - GOV.UK",
   "serviceName": "Find a Court or Tribunal",
   "p1": "This court or tribunal is no longer in service. Business has been transferred to other neighbouring courts.",
   "linkText": "Search for an alternative court or tribunal"
