FACT-324: Add error page content

--- a/src/main/locales/en/error.json
+++ b/src/main/locales/en/error.json
@@ -1,3 +1,5 @@
 {
-  "h1": "Something went wrong"
+  "title": "Service problem - Find a Court or Tribunal - GOV.UK",
+  "h1": "Sorry, there is a problem with the service",
+  "p1": "Try again later."
 }
