--- a/src/main/locales/cy/error.json
+++ b/src/main/locales/cy/error.json
@@ -1,3 +1,5 @@
 {
-  "h1": "Mae rhywbeth wedi mynd o chwith"
+  "title": "Problem gyda'r gwasanaeth - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
+  "h1": "Sorry, there is a problem with the service",
+  "p1": "Try again later."
 }
