FACT-323: Not found page

--- a/src/main/locales/cy/notFound.json
+++ b/src/main/locales/cy/notFound.json
@@ -1,3 +1,6 @@
 {
-  "h1": "Heb ddod o hyd i’r dudalen"
+  "title": "Ni ellir dod o hyd i'r dudalen - Dod o hyd i Lys neu Dribiwnlys - GOV.UK",
+  "h1": "Ni ellir dod o hyd i'r dudalen",
+  "p1": "If you typed the web address, check it is correct.",
+  "p2": "If you pasted the web address, check you copied the entire address."
 }
