--- a/src/main/locales/en/notFound.json
+++ b/src/main/locales/en/notFound.json
@@ -1,3 +1,6 @@
 {
-  "h1": "Page Not Found"
+  "title": "Page not found - Find a Court or Tribunal - GOV.UK",
+  "h1": "Page Not Found",
+  "p1": "If you typed the web address, check it is correct.",
+  "p2": "If you pasted the web address, check you copied the entire address."
 }
